# paralelismo_p1

./: CMakeLists.txt  main.c  paralelismo1.c  paralelismo2a.c  paralelismo2b.c  paralelismo3.1.c  paralelismo3.2.c  paralelismo3.3.c
